--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,9 @@
     <version>0.0.1</version>
     <packaging>pom</packaging>
     <name>DDD :: Demo</name>
+    <description>Demonstrate how to use cp-ddd-framework</description>
 
     <modules>
-        <!-- All the following modules could be a separated source repo -->
         <module>order-center-cp</module>
         <module>order-center-pattern</module>
         <module>order-center-bp-ka</module>
