--- a/order-center-bp-isv/pom.xml
+++ b/order-center-bp-isv/pom.xml
@@ -8,7 +8,7 @@
     </parent>
 
     <artifactId>order-center-bp-isv</artifactId>
-    <name>DDD :: Demo :: BP :: ISV</name>
+    <name>DDDPlus :: Demo :: BP :: ISV</name>
 
     <dependencies>
         <!-- 业务前台依赖中台的spec jar进行能力复用和扩展 -->
