--- a/order-center-cp/cp-oc-controller/pom.xml
+++ b/order-center-cp/cp-oc-controller/pom.xml
@@ -8,7 +8,7 @@
     </parent>
 
     <artifactId>cp-oc-controller</artifactId>
-    <name>DDD :: Demo :: CP :: Controller</name>
+    <name>DDDPlus :: Demo :: CP :: Controller</name>
 
     <dependencies>
         <dependency>
