use dddplus naming

--- a/order-center-cp/cp-oc-client/pom.xml
+++ b/order-center-cp/cp-oc-client/pom.xml
@@ -14,7 +14,7 @@
         <dependency>
             <groupId>io.github.dddplus</groupId>
             <artifactId>dddplus-spec</artifactId>
-            <version>${cp.ddd.framework.version}</version>
+            <version>${dddplus.version}</version>
         </dependency>
         <dependency>
             <groupId>javax.validation</groupId>
