--- a/order-center-cp/cp-oc-test/pom.xml
+++ b/order-center-cp/cp-oc-test/pom.xml
@@ -20,7 +20,7 @@
         <dependency>
             <groupId>io.github.dddplus</groupId>
             <artifactId>dddplus-plugin</artifactId>
-            <version>${cp.ddd.framework.version}</version>
+            <version>${dddplus.version}</version>
         </dependency>
 
         <!-- 中台把Plugin需要的第三方都准备好，Plugin pom以provided scope引入 -->
