--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
         <maven.compiler.failOnError>true</maven.compiler.failOnError>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <cp.ddd.framework.version>0.0.1-SNAPSHOT</cp.ddd.framework.version>
+        <dddplus.version>0.0.1-SNAPSHOT</dddplus.version>
 
         <!-- unified 3rd party dependencies version -->
         <lombok.version>1.18.8</lombok.version>
