fix: Unable to locate Spring NamespaceHandler for XML schema namespace
shade plugin misusage
setup Spring logging with log4j-jcl

--- a/order-center-cp/cp-oc-main/pom.xml
+++ b/order-center-cp/cp-oc-main/pom.xml
@@ -43,6 +43,11 @@
             <artifactId>log4j-slf4j-impl</artifactId>
             <version>2.13.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-jcl</artifactId>
+            <version>2.13.2</version>
+        </dependency>
 
         <!-- json for SpringMVC -->
         <dependency>
@@ -95,9 +100,17 @@
                         <configuration>
                             <createDependencyReducedPom>false</createDependencyReducedPom>
                             <transformers>
-                                <transformer
-                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>org.example.cp.oms.OrderServer</mainClass>
+                                </transformer>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+                                    <resource>META-INF/spring.handlers</resource>
+                                </transformer>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+                                    <resource>META-INF/spring.schemas</resource>
+                                </transformer>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+                                    <resource>META-INF/spring.tooling</resource>
                                 </transformer>
                             </transformers>
                             <artifactSet>
