引入dddplus-enforce，进行架构防腐保护
也在引入过程中发现了不规范之处，一并改正了

--- a/order-center-cp/cp-oc-test/pom.xml
+++ b/order-center-cp/cp-oc-test/pom.xml
@@ -22,6 +22,12 @@
             <artifactId>dddplus-plugin</artifactId>
             <version>${dddplus.version}</version>
         </dependency>
+        <dependency>
+            <groupId>io.github.dddplus</groupId>
+            <artifactId>dddplus-enforce</artifactId>
+            <version>${dddplus.version}</version>
+            <scope>test</scope>
+        </dependency>
 
         <!-- 中台把Plugin需要的第三方都准备好，Plugin pom以provided scope引入 -->
         <dependency>
