--- a/pom.xml
+++ b/pom.xml
@@ -51,9 +51,12 @@
 
     <repositories>
         <repository>
-            <id>ossrh</id>
-            <name>OSS Snapshots Repository</name>
+            <id>ossrh-snapshots</id>
             <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </repository>
+        <repository>
+            <id>ossrh-releases</id>
+            <url>https://oss.sonatype.org/service/local/repositories/releases/content/</url>
         </repository>
     </repositories>
 
