--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <!-- unified 3rd party dependencies version -->
         <lombok.version>1.18.8</lombok.version>
         <guava.version>19.0</guava.version>
+        <junit.version>4.13.1</junit.version>
         <aspectjweaver.version>1.9.1</aspectjweaver.version>
         <javax.validation.version>1.1.0.Final</javax.validation.version>
         <slf4j.version>1.7.25</slf4j.version>
