--- a/order-center-cp/cp-oc-domain/pom.xml
+++ b/order-center-cp/cp-oc-domain/pom.xml
@@ -8,7 +8,7 @@
     </parent>
 
     <artifactId>cp-oc-domain</artifactId>
-    <name>DDDPlus :: Demo :: CP :: Domain</name>
+    <name>DDDplus :: Demo :: CP :: Domain</name>
 
     <dependencies>
         <dependency>
