--- a/order-center-cp/cp-oc-main/pom.xml
+++ b/order-center-cp/cp-oc-main/pom.xml
@@ -9,7 +9,7 @@
     </parent>
 
     <artifactId>cp-oc-main</artifactId>
-    <name>DDDPlus :: Demo :: CP :: Main</name>
+    <name>DDDplus :: Demo :: CP :: Main</name>
 
     <dependencies>
         <dependency>
