--- a/order-center-pattern/pom.xml
+++ b/order-center-pattern/pom.xml
@@ -8,7 +8,7 @@
     </parent>
 
     <artifactId>order-center-pattern</artifactId>
-    <name>DDDPlus :: Demo :: CP :: Patterns</name>
+    <name>DDDplus :: Demo :: CP :: Patterns</name>
 
     <dependencies>
         <dependency>
