--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>dddplus-demo</artifactId>
     <version>0.0.1</version>
     <packaging>pom</packaging>
-    <name>DDDPlus :: Demo</name>
+    <name>DDDplus :: Demo</name>
     <description>Demonstrate how to use cp-ddd-framework</description>
 
     <modules>
