init：演示支撑域，库存和仓储，各成一体

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
         <module>order-center-bp-ka</module>
         <module>order-center-bp-isv</module>
         <module>order-center-bp-fresh</module>
+        <module>order-center-domain-stock</module>
+        <module>order-center-domain-wms</module>
     </modules>
 
     <properties>
