--- a/order-center-domain-stock/order-center-stock-spec/pom.xml
+++ b/order-center-domain-stock/order-center-stock-spec/pom.xml
@@ -3,12 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.example</groupId>
-        <artifactId>dddplus-demo</artifactId>
+        <artifactId>order-center-domain-stock</artifactId>
         <version>0.0.1</version>
     </parent>
 
-    <artifactId>order-center-domain-wms</artifactId>
-    <name>DDDplus :: Demo :: Domain :: WMS</name>
-    <description>订单的支撑域：WMS，仓储管理系统</description>
+    <artifactId>order-center-stock-spec</artifactId>
+    <name>DDDplus :: Demo :: Domain :: Stock :: Spec</name>
 
 </project>
