--- a/order-center-cp/cp-oc-test/pom.xml
+++ b/order-center-cp/cp-oc-test/pom.xml
@@ -35,6 +35,13 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- 支撑域 -->
+        <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>order-center-stock-infrastructure</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
         <!-- 中台把Plugin需要的第三方都准备好，Plugin pom以provided scope引入 -->
         <dependency>
             <groupId>com.google.guava</groupId>
